# CMakeList.txt : CMake project for jitThunderScript, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("jitThunderScript")

# Add source to this project's executable.
add_executable (jitThunderScript "jitThunderScript.cpp" "jitThunderScript.h")

# TODO: Add tests and install targets if needed.
